syntax = "proto3";

package kbu_store;

option go_package = "application/grpc/pb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message Category {
  string ID = 1;
  string name = 2;
  string status = 3;
  google.protobuf.Timestamp createdAt = 4;
}

message CreateCategoryRequest {
  string name = 1;
}

message CategoryRequest {
  string id = 1;
}

message GetCategoryByIdAndStatusRequest {
  enum CategoryStatus {
    pending = 0;
    active = 1;
    desable = 2;
  }

  string id = 1;
  CategoryStatus status = 2;
}

message GetAllCategoryByStatusRequest {
  enum CategoryStatus {
    pending = 0;
    active = 1;
    desable = 2;
  }

  CategoryStatus status = 1;
  int32 page = 2;
  int32 limit = 3;
  string sort = 4;
}

message GetAllCategoryRequest {
  int32 page = 1;
  int32 limit = 2;
  string sort = 3;
}

message ListCategoryResponse {
  repeated Category categories = 1;
  int64 total = 2;
}

service CategoryService {
  rpc Create (CreateCategoryRequest) returns (google.protobuf.Empty) {};
  rpc GetById (CategoryRequest) returns (Category) {};
  rpc GetByIdAndStatus (GetCategoryByIdAndStatusRequest) returns (Category) {};
  rpc GetAll (GetAllCategoryRequest) returns (ListCategoryResponse) {};
  rpc GetAllByStatus (GetAllCategoryByStatusRequest) returns (ListCategoryResponse) {};
  rpc Activate (CategoryRequest) returns (google.protobuf.Empty) {};
  rpc Disable (CategoryRequest) returns (google.protobuf.Empty) {};
}